# TripPlannerAgent

./: .gitignore  README.md  docker-compose.yml
.figma/: design-system-rules.md  style-guide.md
.github/: copilot-instructions.md
.github/agents/: backend-engineer.agent.md  codebase-diagramming.agent.md  frontend-engineer.agent.md  ui-designer.agent.md
.github/chats/: step1_frontend_continued_implementation_chat.json  step5_configure_and_test_pydantic_ai_chat.json  (+1 more)
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/docs/diagrams/: Airbnb_Agent_Tools_Workflow_Architecture.excalidraw  TripPlannerAgentPlatform_Security_Architecture.excalidraw  TripPlannerAgentSchemas.excalidraw
backend/src/: __init__.py  database.py  main.py  models.py
backend/src/agent/: __init__.py  agent.py  router.py  schemas.py
backend/src/airbnb/: __init__.py  constants.py  schemas.py
backend/src/airbnb/tools/: __init__.py  analysis.py  exploration.py  parsers.py  urls.py
backend/src/auth/: __init__.py  agent_jwt.py  api_key.py  dependencies.py
backend/src/browser/: __init__.py
backend/src/browser/handlers/: __init__.py
backend/src/core/: __init__.py  config.py  constants.py  dependencies.py  exception_handlers.py  exceptions.py  utils.py
backend/tests/: __init__.py  conftest.py  test_airbnb_tools.py  test_core.py  test_schemas.py
frontend/: .dockerignore  .env.example  .prettierignore  .prettierrc  Dockerfile  README.md  components.json  eslint.config.mjs  nuxt.config.ts  openapi-ts.config.ts  package.json  pnpm-lock.yaml
(+5 files in other folders)
